--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "KidMathTest",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "react": "16.8.3",
-    "react-native": "0.59.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/runtime": "^7.3.4",
-    "babel-jest": "^24.5.0",
-    "jest": "^24.5.0",
-    "metro-react-native-babel-preset": "^0.53.0",
-    "react-test-renderer": "16.8.3"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+	"name": "KidMathTest",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"react": "16.8.3",
+		"react-native": "0.59.0",
+		"react-native-elements": "^1.1.0",
+		"react-native-exit-app": "^1.0.0",
+		"react-native-gesture-handler": "^1.1.0",
+		"react-native-linear-gradient": "^2.5.3",
+		"react-native-sound": "^0.10.12",
+		"react-native-vector-icons": "^6.4.1",
+		"react-navigation": "^3.3.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.3.4",
+		"@babel/runtime": "^7.3.4",
+		"babel-jest": "^24.5.0",
+		"jest": "^24.5.0",
+		"metro-react-native-babel-preset": "^0.53.0",
+		"react-test-renderer": "16.8.3"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
